--- a/hoh/chat.html
+++ b/hoh/chat.html
@@ -82,79 +82,84 @@ table{
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h2>Hey,how can I help you....</h2>
+      <h2>Hey, how can I help you....</h2>
+      <form action="Display.php" method="get">
       <table style="width: 100%">
             <tr>
-                <td>      <label class="container">One
-                        <input type="checkbox">
+                <td>      <label class="container">Fever
+                        <input type="checkbox" name="symp" value="Fever">
                         <span class="checkmark"></span>
                       </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox" >
+                <td>      <label class="container">Headache
+                        <input type="checkbox" name="symp" value="Headache">
                         <span class="checkmark"></span>
                       </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                      </label></td>
-            </tr>
-            <tr>
-                <td>      <label class="container">One
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                      </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                      </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox">
+                <td>      <label class="container">Fatigue
+                        <input type="checkbox" name="symp" value="Fatigue">
                         <span class="checkmark"></span>
                       </label></td>
             </tr>
             <tr>
-                <td>      <label class="container">One
-                        <input type="checkbox">
+                <td>      <label class="container">Sneezing
+                        <input type="checkbox" name="symp" value="Sneezing">
                         <span class="checkmark"></span>
                       </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox">
+                <td>      <label class="container">Cough
+                        <input type="checkbox" name="symp" value="Cough">
                         <span class="checkmark"></span>
                       </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                      </label></td>
-            </tr>
-            <tr>
-                <td>      <label class="container">One
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                      </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox">
-                        <span class="checkmark"></span>
-                      </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox">
+                <td>      <label class="container">Soar Throat
+                        <input type="checkbox" name="symp" value="Soar Throat">
                         <span class="checkmark"></span>
                       </label></td>
             </tr>
             <tr>
-                <td>      <label class="container">One
-                        <input type="checkbox">
+                <td>      <label class="container">Abdominal Pain
+                        <input type="checkbox" name="symp" value="Abdominal Pain">
                         <span class="checkmark"></span>
                       </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox">
+                <td>      <label class="container">Vomiting
+                        <input type="checkbox" name="symp" value="Vomiting">
                         <span class="checkmark"></span>
                       </label></td>
-                <td>      <label class="container">One
-                        <input type="checkbox">
+                <td>      <label class="container">Nausea
+                        <input type="checkbox" name="symp" value="Nausea">
                         <span class="checkmark"></span>
                       </label></td>
             </tr>
+            <tr>
+                <td>      <label class="container">Dehydration
+                        <input type="checkbox" name="symp" value="Dehydration">
+                        <span class="checkmark"></span>
+                      </label></td>
+                <td>      <label class="container">Acidity
+                        <input type="checkbox" name="symp" value="Acidity">
+                        <span class="checkmark"></span>
+                      </label></td>
+                <td>      <label class="container">Bloating
+                        <input type="checkbox" name="symp" value="Bloating">
+                        <span class="checkmark"></span>
+                      </label></td>
+            </tr>
+            <tr>
+                <td>      <label class="container">Loss of Breath
+                        <input type="checkbox" name="symp" value="Loss of Breath">
+                        <span class="checkmark"></span>
+                      </label></td>
+                <td>      <label class="container">Allergy
+                        <input type="checkbox" name="symp" value="Allergy">
+                        <span class="checkmark"></span>
+                      </label></td>
+                <td>      <label class="container">Insomnia
+                        <input type="checkbox" name="symp" value="Insomnia">
+                        <span class="checkmark"></span>
+                      </label></td>
+            </tr>
+             <tr>  
+      <td colspan="2" align="center"><input type="submit" value="submit" name="submit"></td>  
+   </tr>  
         </table>
+      </form>
       </div>
   </div>
   <video width="100px" autoplay="" loop="" muted="">
